--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                                         <span class="slider_text1">Unlock the Full Power of Odoo – Train Your Team with Certified Experts</span>
                                         <span class="slider_text2">We make Odoo training simple, effective, and tailored to your team’s real needs</span>
                                         <a href="#" class="slider_text3"><i class="fa fa-download"></i>&nbsp; Get Course Outline</a>
-                                        <a href="#pricing" class="slider_text4">Start Your Odoo Journey</a>
+                                        <a href="#pricing" class="slider_text4">Let's Get Started</a>
                                     </div>
                                 </div>
 
