--- a/index.html
+++ b/index.html
@@ -103,9 +103,12 @@
                                 <!-- Left Column -->
                                 <div class="sixcol left-column">
                                     <div>
-                                        <span class="slider_text1">Unlock the Full Power of Odoo – Train Your Team with Certified Experts</span>
-                                        <span class="slider_text2">We make Odoo training simple, effective, and tailored to your team’s real needs</span>
-                                        <a href="#" class="slider_text3"><i class="fa fa-download"></i>&nbsp; Get Course Outline</a>
+                                        <span class="slider_text1">Unlock the Full Power of Odoo – Train Your Team with
+                                            Certified Experts</span>
+                                        <span class="slider_text2">We make Odoo training simple, effective, and tailored
+                                            to your team’s real needs</span>
+                                        <a href="#" class="slider_text3"><i class="fa fa-download"></i>&nbsp; Get Course
+                                            Outline</a>
                                         <a href="#pricing" class="slider_text4">Let's Get Started</a>
                                     </div>
                                 </div>
@@ -328,28 +331,28 @@
                     need to succeed. Typical training often misses these key elements — but at Zinfog, this approach
                     sets us apart.</span>
             </div> -->
-             <section class="counter-section">
-            <div class="counter-box">
-                <div class="counter" data-target="300">0</div>
-                <div class="label">Teams Trained</div>
-            </div>
-            <div class="counter-box">
-                <div class="counter" data-target="40">0</div>
-                <div class="label">Departments Covered</div>
-            </div>
-            <div class="counter-box">
-                <div class="counter" data-target="97">0</div>
-                <div class="label">% Satisfaction</div>
-            </div>
-            <div class="counter-box">
-                <div class="counter" data-target="5">0</div>
-                <div class="label">Industries Served</div>
-            </div>
-        </section>
+            <section class="counter-section">
+                <div class="counter-box">
+                    <div class="counter" data-target="300">0</div>
+                    <div class="label">Teams Trained</div>
+                </div>
+                <div class="counter-box">
+                    <div class="counter" data-target="40">0</div>
+                    <div class="label">Departments Covered</div>
+                </div>
+                <div class="counter-box">
+                    <div class="counter" data-target="97">0</div>
+                    <div class="label">% Satisfaction</div>
+                </div>
+                <div class="counter-box">
+                    <div class="counter" data-target="5">0</div>
+                    <div class="label">Industries Served</div>
+                </div>
+            </section>
         </div>
         <!-- end testimonials_wrapper -->
 
-       
+
 
         <!--begin info_white_wrapper -->
         <div id="services" class="info_white_wrapper">
@@ -863,50 +866,94 @@
         <div class="row">
             <!--begin twelvecol -->
             <div class="twelvecol">
-                <!--begin footer_logo icons -->
-                <span class="footer_logo"><img src="lib/images/logo.svg" width="150px" height="50px" alt=""></span>
-                <!--end footer_logo icons -->
-                <!--begin copyright -->
-                <p class="copyright">
-                    <!-- Copyright © 2014 Fourteen. All rights reserved.<br />Designed
-                    &amp; developed by
-                    <a href="http://themeforest.net/user/bogdan_09/portfolio?ref=bogdan_09" target="_blank">Bogdan</a>. -->
-                    1st Floor, Sahya Govt CyberPark, <br /> GA College P.O Calicut, Kerala - 673014 <br /><br />
-                    <a href="telto:+91 9778965493"><i class="fa fa-phone ms"></i>+91 9778965493</a> <br /><br />
-                    <a href="mailto:hello@zinfog.com"><i class="fa fa-envelope ms"></i>hello@zinfog.com</a>
-                </p>
-                <!--end copyright -->
 
-
-                <div class="footer_line"><span></span></div>
-                <!--begin social icons -->
-                <ul class="social">
-                    <li>
-                        <a href="#">
-                            <i class="fa fa-twitter contact-icon-circle"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <i class="fa fa-instagram fa-1x contact-icon-circle"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <i class="fa fa-facebook fa-1x contact-icon-circle"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <i class="fa fa-linkedin fa-1x contact-icon-circle"></i>
-                        </a>
-                    </li>
-                </ul>
-                <!--end social icons -->
             </div>
             <!--end twelvecol -->
         </div>
         <!--end row -->
+        <div class="row">
+            <!--begin twelvecol -->
+            <div class="twelvecol">
+                <!--begin sixcol -->
+                <div class="sixcol padding_top left_fade">
+                    <!--begin footer_logo icons -->
+                    <span class="footer_logo"><img src="lib/images/logo.svg" width="150px" height="50px" alt=""></span>
+                    <!--end footer_logo icons -->
+                    <!--begin copyright -->
+                    <p class="copyright">
+                        <!-- Copyright © 2014 Fourteen. All rights reserved.<br />Designed
+                    &amp; developed by
+                    <a href="http://themeforest.net/user/bogdan_09/portfolio?ref=bogdan_09" target="_blank">Bogdan</a>. -->
+                        1st Floor, Sahya Govt CyberPark, <br /> GA College P.O Calicut, Kerala - 673014 <br /><br />
+                        <a href="telto:+91 9778965493"><i class="fa fa-phone ms"></i>+91 9778965493</a> <br /><br />
+                        <a href="mailto:hello@zinfog.com"><i class="fa fa-envelope ms"></i>hello@zinfog.com</a>
+                    </p>
+                    <!--end copyright -->
+
+
+                    <div class="footer_line"><span></span></div>
+                    <!--begin social icons -->
+                    <ul class="social">
+                        <li>
+                            <a href="#">
+                                <i class="fa fa-twitter contact-icon-circle"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i class="fa fa-instagram fa-1x contact-icon-circle"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i class="fa fa-facebook fa-1x contact-icon-circle"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i class="fa fa-linkedin fa-1x contact-icon-circle"></i>
+                            </a>
+                        </li>
+                    </ul>
+                    <!--end social icons -->
+                </div>
+                <!--end sixcol -->
+
+                <!--begin sixcol -->
+                <div class="sixcol last right_fade">
+                    <section id="contact">
+                        <div class="contact-box">
+                            <h2>Lets Discuss about Odoo</h2>
+                            <p class="contact-lead">Help us to help you</p>
+                            <!-- <p>Write to me directly or call me – I look forward to exciting ideas!</p> -->
+                            <form class="contact-form" method="POST" action="#contact" id="contactForm">
+                                <div class="form-item">
+                                    <label for="contact-name">Full Name</label>
+                                    <input id="contact-name" name="name" type="text" required>
+                                </div>
+                                <div class="form-item">
+                                    <label for="contact-email">E-Mail</label>
+                                    <input id="contact-email" name="email" type="email" required>
+                                </div>
+                                <div class="form-item">
+                                    <label for="contact-subject">Subject</label>
+                                    <input id="contact-subject" name="subject" type="text" required>
+                                </div>
+                                <div class="form-item">
+                                    <label for="contact-message">Message</label>
+                                    <textarea id="contact-message" name="message" rows="4" required></textarea>
+                                </div>
+                                <input type="hidden" name="g-recaptcha-response" id="g-recaptcha-response">
+                                <button class="form-button" type="submit">Send Message</button>
+                            </form>
+                        </div>
+                    </section>
+                </div>
+                <!--end sixcol -->
+            </div>
+            <!--end twelvecol -->
+        </div>
+        <!--end nine_section -->
     </footer>
     <!--end footer -->
     </div>
