--- a/index.html
+++ b/index.html
@@ -878,6 +878,7 @@
                 <div class="sixcol padding_top left_fade">
                     <!--begin footer_logo icons -->
                     <span class="footer_logo"><img src="lib/images/logo.svg" width="150px" height="50px" alt=""></span>
+                    <p id="footer_text">Zinfog codelabs is a Web development company  who focus on providing customized solutions to firms by setting Odoo erp customization and consulting services, Mobile and web application development, ecommerce app development services and other business solutions to enhance the performance of the firms.</p>
                     <!--end footer_logo icons -->
                     <!--begin copyright -->
                     <p class="copyright">
