--- a/index.html
+++ b/index.html
@@ -876,47 +876,53 @@
             <div class="twelvecol">
                 <!--begin sixcol -->
                 <div class="sixcol padding_top left_fade">
-                    <!--begin footer_logo icons -->
-                    <span class="footer_logo"><img src="lib/images/logo.svg" width="150px" height="50px" alt=""></span>
-                    <p id="footer_text">Zinfog codelabs is a Web development company  who focus on providing customized solutions to firms by setting Odoo erp customization and consulting services, Mobile and web application development, ecommerce app development services and other business solutions to enhance the performance of the firms.</p>
-                    <!--end footer_logo icons -->
-                    <!--begin copyright -->
-                    <p class="copyright">
-                        <!-- Copyright © 2014 Fourteen. All rights reserved.<br />Designed
+                    <div id="footer_left">
+                        <!--begin footer_logo icons -->
+                        <span class="footer_logo"><img src="lib/images/logo.svg" width="150px" height="50px"
+                                alt=""></span>
+                        <p id="footer_text">Zinfog codelabs is a Web development company who focus on providing
+                            customized solutions to firms by setting Odoo erp customization and consulting services,
+                            Mobile and web application development, ecommerce app development services and other
+                            business solutions to enhance the performance of the firms.</p>
+                        <!--end footer_logo icons -->
+                        <!--begin copyright -->
+                        <p class="copyright">
+                            <!-- Copyright © 2014 Fourteen. All rights reserved.<br />Designed
                     &amp; developed by
                     <a href="http://themeforest.net/user/bogdan_09/portfolio?ref=bogdan_09" target="_blank">Bogdan</a>. -->
-                        1st Floor, Sahya Govt CyberPark, <br /> GA College P.O Calicut, Kerala - 673014 <br /><br />
-                        <a href="telto:+91 9778965493"><i class="fa fa-phone ms"></i>+91 9778965493</a> <br /><br />
-                        <a href="mailto:hello@zinfog.com"><i class="fa fa-envelope ms"></i>hello@zinfog.com</a>
-                    </p>
-                    <!--end copyright -->
+                            1st Floor, Sahya Govt CyberPark, <br /> GA College P.O Calicut, Kerala - 673014 <br /><br />
+                            <a href="telto:+91 9778965493"><i class="fa fa-phone ms"></i>+91 9778965493</a> <br /><br />
+                            <a href="mailto:hello@zinfog.com"><i class="fa fa-envelope ms"></i>hello@zinfog.com</a>
+                        </p>
+                        <!--end copyright -->
 
 
-                    <div class="footer_line"><span></span></div>
-                    <!--begin social icons -->
-                    <ul class="social">
-                        <li>
-                            <a href="#">
-                                <i class="fa fa-twitter contact-icon-circle"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <i class="fa fa-instagram fa-1x contact-icon-circle"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <i class="fa fa-facebook fa-1x contact-icon-circle"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <i class="fa fa-linkedin fa-1x contact-icon-circle"></i>
-                            </a>
-                        </li>
-                    </ul>
-                    <!--end social icons -->
+                        <div class="footer_line"><span></span></div>
+                        <!--begin social icons -->
+                        <ul class="social">
+                            <li>
+                                <a href="#">
+                                    <i class="fa fa-twitter contact-icon-circle"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <i class="fa fa-instagram fa-1x contact-icon-circle"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <i class="fa fa-facebook fa-1x contact-icon-circle"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <i class="fa fa-linkedin fa-1x contact-icon-circle"></i>
+                                </a>
+                            </li>
+                        </ul>
+                        <!--end social icons -->
+                    </div>
                 </div>
                 <!--end sixcol -->
 
