--- a/index.html
+++ b/index.html
@@ -608,102 +608,72 @@
             <div class="nine_section up_fade">
 
                 <!--begin row -->
-                <div class="row">
+            <div class="price-section">
+  <div class="price-grid">
 
-                    <!--begin twelvecol -->
-                    <div class="twelvecol">
+    <div class="price_item">
+      <div class="price_head">
+        <h2>Functional Training</h2>
+        <h4>₹20,000–₹80,000</h4>
+      </div>
+      <ul class="price_features">
+        <li>Online / Onsite</li>
+        <li>2–6 weeks</li>
+        <li>Core Odoo modules training</li>
+      </ul>
+      <div class="price_button_wrapper">
+        <a href="#" class="price_button">Book a Free Demo</a>
+      </div>
+    </div>
 
-                        <!--begin price_item -->
-                        <div class="threecol price_item">
+    <div class="price_item">
+      <div class="price_head">
+        <h2>Odoo Online Kickstart</h2>
+        <h4>₹30,000–₹60,000</h4>
+      </div>
+      <ul class="price_features">
+        <li>Online</li>
+        <li>3 weeks</li>
+        <li>Focus on setup, workflows & reporting</li>
+      </ul>
+      <div class="price_button_wrapper">
+        <a href="#" class="price_button">Book a Free Demo</a>
+      </div>
+    </div>
 
-                            <div class="price_head">
-                                <h2>Functional Training</h2>
-                                <h4>₹20,000–₹80,000</h4>
-                            </div>
+    <div class="price_item">
+      <div class="price_head">
+        <h2>Corporate Support</h2>
+        <h4>₹15,000/month onwards</h4>
+      </div>
+      <ul class="price_features">
+        <li>Ongoing</li>
+        <li>Monthly</li>
+        <li>Dedicated trainer access</li>
+      </ul>
+      <div class="price_button_wrapper">
+        <a href="#" class="price_button">Book a Free Demo</a>
+      </div>
+    </div>
 
-                            <ul class="price_features">
-                                <li>Online / Onsite</li>
-                                <li>2–6 weeks</li>
-                                <li>Core Odoo modules training</li>
-                            </ul>
+    <div class="price_item">
+      <div class="price_head">
+        <h2>Department-Specific Training</h2>
+        <h4>Contact Us</h4>
+      </div>
+      <ul class="price_features">
+        <li>Online/Hybrid</li>
+        <li>Custom</li>
+        <li>Tailored training for specific departments</li>
+      </ul>
+      <div class="price_button_wrapper">
+        <a href="#" class="price_button">Book a Free Demo</a>
+      </div>
+    </div>
 
-                            <div class="price_button_wrapper">
-                                <a href="#" class="price_button">Book a Free Demo</a>
-                            </div>
+  </div>
+</div>
 
-                        </div>
-                        <!--end price_item -->
-
-                        <!--begin price_item -->
-                        <div class="threecol price_item">
-
-                            <div class="price_head">
-                                <h2>Odoo Online Kickstart</h2>
-                                <h4>₹30,000–₹60,000</h4>
-                            </div>
-
-                            <ul class="price_features">
-                                <li>Online</li>
-                                <li>3 weeks</li>
-                                <li> Focus on setup, workflows & reporting</li>
-                            </ul>
-
-                            <div class="price_button_wrapper">
-                                <a href="#" class="price_button">Book a Free Demo</a>
-                            </div>
-
-                        </div>
-                        <!--end price_item -->
-
-                        <!--begin price_item -->
-                        <div class="threecol price_item">
-
-                            <div class="price_head">
-                                <h2>Corporate Support</h2>
-                                <h4>₹15,000/month onwards</h4>
-                            </div>
-
-                            <ul class="price_features">
-                                <li>Ongoing</li>
-                                <li>Monthly</li>
-                                <li>Dedicated trainer access</li>
-                            </ul>
-
-                            <div class="price_button_wrapper">
-                                <a href="#" class="price_button">Book a Free Demo</a>
-                            </div>
-
-                        </div>
-                        <!--end price_item -->
-
-                        <!--begin price_item -->
-                        <div class="threecol last price_item">
-
-                            <div class="price_head">
-                                <div class="price_head">
-                                    <h2>Department-Specific Training</h2>
-                                    <h4>Contact Us</h4>
-                                </div>
-
-                                <ul class="price_features">
-                                    <li>Online/Hybrid</li>
-                                    <li>Custom</li>
-                                    <li>Tailored training for specific departments</li>
-                                </ul>
-
-                                <div class="price_button_wrapper">
-                                    <a href="#" class="price_button">Book a Free Demo</a>
-                                </div>
-                            </div>
-                            <!--end priceitem -->
-
-                        </div>
-                        <!--end twelvecol -->
-
-                    </div>
-                    <!--end row -->
-
-                </div>
                 <!--end nine_section -->
         </section>
         <!--end nine_section_wrapper -->
